wl18xx: add module skeleton
Add the module main.c file with a skeleton for init, probe and
friends.  This will be used for the wl18xx chip family.

Signed-off-by: Luciano Coelho <coelho@ti.com>

--- a/drivers/net/wireless/ti/Kconfig
+++ b/drivers/net/wireless/ti/Kconfig
@@ -4,4 +4,5 @@ menuconfig WL_TI
 	  This section contains suppot for all the wireless drivers
 	  for TI WLAN chips, such as wl1251 and the wl12xx family.
 
+source "drivers/net/wireless/ti/wl18xx/Kconfig"
 source "drivers/net/wireless/ti/wlcore/Kconfig"
