--- a/drivers/net/wireless/ti/wlcore/Makefile
+++ b/drivers/net/wireless/ti/wlcore/Makefile
@@ -1,4 +1,4 @@
-wlcore-objs		= main.o mac80211_ops.o
+wlcore-objs		= main.o mac80211_ops.o io.o
 
 #wlcore_spi-objs 	= spi.o
 #wlcore_sdio-objs	= sdio.o
